# ctf_agent_sandbox

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  __init__.py  __main__.py  assembler.py  cli.py  config.example.json  config.example.yaml  docker-compose.yml  main.py  models.py  modules.py  pyproject.toml  service_registry.py  setup.sh
agent_cli_tools/: __init__.py  codex.py  gemini.py  opencode.py
agent_cli_tools/codex/: config.toml
agent_cli_tools/gemini/: settings.json
agent_cli_tools/opencode/: opencode.json
background_services/: __init__.py  dockerd.py  mcp_terminal.py
codex/: config.toml
mcp/: mcp_run.sh
note/: current-design.md  io-contract.md
opencode/: opencode.json
prompt/: AGENTS.md
sandbox/: locale.gen  startup.sh  sudoers
skills/mcp-terminal-operator/: SKILL.md
templates/: Dockerfile.tpl  env-skill.md.tpl  startup.sh.tpl
test/: conftest.py  test_agent_cli_plugins.py  test_agent_cli_registry.py  test_assembler.py  test_background_services.py  test_cli.py  test_models.py  test_modules.py  test_package_api.py  test_service_registry.py  test_utils_docker_build.py  test_utils_runtime.py  test_utils_template.py
utils/: __init__.py  docker_build.py  runtime.py  template.py
