[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctf_agent_sandbox"
version = "0.1.0"
description = "Modular Docker sandbox assembler for CTF agent environments"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docker>=7.1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.2",
]

[project.scripts]
ctf_agent_sandbox = "ctf_agent_sandbox.cli:main"

[tool.setuptools]
package-dir = {ctf_agent_sandbox = "."}
packages = [
    "ctf_agent_sandbox",
    "ctf_agent_sandbox.background_services",
    "ctf_agent_sandbox.agent_cli_tools",
    "ctf_agent_sandbox.utils",
]

[tool.setuptools.package-data]
ctf_agent_sandbox = ["templates/*.tpl"]

[tool.uv]
package = true
